# anime_catalog

./: CMakeLists.txt  README.md  compiling_help.txt
database/: notes.txt
doc/: overview.txt
src/: main.cs
src/database/: .database.cs.swp  database.cs  database_core.cs  database_util.cs  notes.txt
src/ui/: .MainWindow.cs.swp  AnimeDetails.Designer.cs  AnimeDetails.cs  MainWindow.Designer.cs  MainWindow.cs
